<resources>
    <string name="app_logo">App Logo</string>
    <string name="app_name">BehoerdeToGo</string>
    <string name="email">Email</string>
    <string name="password">Passwort</string>
    <string name="register">Registrieren</string>
    <string name="login">Anmelden</string>
    <string name="vorname">Vorname</string>
    <string name="nachname">Nachname</string>
    <string name="frau">Frau</string>
    <string name="mann">Mann</string>
    <string name="geburtsdatum">Geburtsdatum</string>
    <string name="nationalitaet">Nationalität</string>
    <string name="divers">Divers</string>
    <string name="keineAngabe">Keine Angabe</string>
    <string name="confirmPassword">Passwort bestaetigen</string>
    <string name="vergessen">Passwort vergessen?</string>
</resources>