<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/backgroundColor">

    <RadioGroup
        android:id="@+id/radioGeschlechter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingEnd="15dp"
            android:text="@string/frau"
            tools:ignore="RtlSymmetry" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingEnd="15dp"
            android:text="@string/mann"
            tools:ignore="RtlSymmetry" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingEnd="15dp"
            android:text="@string/divers"
            tools:ignore="RtlSymmetry" />

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/keineAngabe" />
    </RadioGroup>

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:autofillHints="emailAddress"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:autofillHints="password"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/confirmPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:autofillHints="password"
        android:hint="@string/confirmPassword"
        android:inputType="textPassword"
        />

    <EditText
        android:id="@+id/vornameEditText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:autofillHints="name"
        android:inputType="text"
        android:hint="@string/vorname" />

    <EditText
        android:id="@+id/nachnameEditText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:autofillHints="name"
        android:inputType="text"
        android:hint="@string/nachname" />

    <Button
        android:id="@+id/datePickerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="30sp"
        android:textColor="@color/black"
        style="?android:spinnerStyle"
        android:hint="@string/geburtsdatum"
        android:onClick="openDatePicker"/>


    <EditText
        android:id="@+id/nationalitaetEditText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:autofillHints=""
        android:inputType="text"
        android:hint="@string/nationalitaet" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/register"
        android:background="@color/colorPrimary" />
</LinearLayout>
